safari bug fixed, precompile on production fixed

--- a/app/assets/javascripts/editor.js.erb
+++ b/app/assets/javascripts/editor.js.erb
@@ -1,3 +1,6 @@
+//= require ./ace/ace-uncompressed
+//= require ./ace/mode-html
+//= require ./ace/theme-tomorrow_night
 //= require tinymce-jquery
 var editor = window.editor = (function(editor){
 	
