--- a/app/assets/stylesheets/editor.css.erb
+++ b/app/assets/stylesheets/editor.css.erb
@@ -20,3 +20,32 @@
 .switches a.active{
 	background:#fff;
 }
+
+.translations a{
+	display: inline-block;
+	background: #fff;
+	text-shadow: white 0 1px 0;
+	border: solid 1px #CDCDCD;
+	border-color: #D4D4D4;
+	border-top-color: #CDCDCD;
+	border-right-color: #D4D4D4;
+	border-bottom: none;
+	border-left-color: #D4D4D4;
+
+	font-size: 1.0em;
+	font-weight: bold;
+	line-height: 18px;
+	margin-bottom: 0;
+	color: #c8c8c8;
+	padding: 5px 10px 3px 10px;
+	text-decoration:none;
+}
+
+.translations a.active{
+	color: #5E6469;
+	background: #EFEFEF;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#dfe1e2, endColorstr=#efefef);
+	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#dfe1e2, endColorstr=#efefef);
+	background: -webkit-gradient(linear, left top, left bottom, from(#DFE1E2), to(#EFEFEF));
+	background: -moz-linear-gradient(-90deg, #DFE1E2, #EFEFEF);
+}
