mongoid localize support added, set use_prefix option false to benefit

--- a/app/assets/stylesheets/editor.css.erb
+++ b/app/assets/stylesheets/editor.css.erb
@@ -5,7 +5,7 @@
 	display:none;
 }
 
-<%= Editor.editables.map{ |e| "label[for=#{e}_body]" }.join(", ") %>{
+<%= Editor.editables.map{ |e| Editor.use_suffix ? "label[for=#{e}_body]" : "label[for=#{e}]" }.join(", ") %>{
 	margin-bottom: 400px;
 }
 
