--- a/app/assets/javascripts/editor.js.erb
+++ b/app/assets/javascripts/editor.js.erb
@@ -8,6 +8,7 @@ var editor = window.editor = (function(editor){
 														
 	var currents = editor.currents = {};
 	var editables = editor.editables = <%= Editor.editables.to_json %>;
+	var use_suffix = editor.use_suffix = <%= Editor.use_suffix ? "true" : "false" %>;
 	for( var i in editables){
 		editor.currents[editables[i]] = "visual";
 	}
@@ -72,12 +73,12 @@ var editor = window.editor = (function(editor){
 
 			$(".translations a:first").click();
 
-			var editables = <%= Editor.editables.to_json %>
-
 			var t = editor.t = false;
 		
 			for(var i=0; i < editables.length; i++){
-				if ( $("#"+editables[i]+"_body").length > 0 ){
+				var eid = use_suffix ? "#"+editables[i]+"_body" : "#"+editables[i];
+
+				if ( $( eid ).length > 0 ){
 					t = editables[i];
 					initialize(t);
 				}
@@ -91,7 +92,7 @@ var editor = window.editor = (function(editor){
 	var initialize = editor.initialize = function(t) {
 		
 			// var textarea = editor.textarea = typeof editor.textarea!=="undefined" ? editor.textarea : '#' + t + '_body';
-			var textarea = "#" + t + "_body";
+			var textarea = use_suffix ? "#" + t + "_body" : "#" + t ;
 
 			// var $textarea = editor.$textarea = $(textarea);
 			var $textarea = $(textarea);
