--- a/app/assets/javascripts/editor.js.erb
+++ b/app/assets/javascripts/editor.js.erb
@@ -187,7 +187,7 @@ var editor = window.editor = (function(editor){
 					convert_newlines_to_brs: 0,
 					// custom_elements:
 					doctype: "<!DOCTYPE html>",
-					content_css: "<%= asset_path "application.css" %>",
+					content_css: "/admin/application.css",
 					element_format: 'raw',
 					encoding: '',
 					// entities: ,
