--- a/app/assets/stylesheets/editor.css.erb
+++ b/app/assets/stylesheets/editor.css.erb
@@ -1,3 +1,15 @@
+.editor_loader{
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background:#f0f0f0;
+	opacity: 0.9;
+  filter: alpha(opacity=90);
+	padding:10px;
+	z-index:100000;
+}
 .ace_editor{
 	position:relative !important;
 	width:77.8%;
